force-app/main/default/objects/Sculptra_Body_S__c/Sculptra_Body_S__c.object-meta.xml
<CustomObject>
    <label>Sculptra Body(S)</label>
    <nameField>
        <label>Sculptra Body(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sculptra Body(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>