force-app/main/default/objects/Sculptra_Body_S__c/fields/Injectables__c.field-meta.xml
<CustomField>
    <fullName>Injectables__c</fullName>
    <label>Injectables</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sculptra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>