force-app/main/default/objects/Sculptra_Body_S__c/fields/of_vials__c.field-meta.xml
<CustomField>
    <fullName>of_vials__c</fullName>
    <label># of vials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>