force-app/main/default/objects/Sculptra_Body_S__c/fields/Reconstitution__c.field-meta.xml
<CustomField>
    <fullName>Reconstitution__c</fullName>
    <label>Reconstitution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>