force-app/main/default/objects/Sculptra_Body_S__c/fields/Sculptra_Body__c.field-meta.xml
<CustomField>
    <fullName>Sculptra_Body__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sculptra Body</label>
    <referenceTo>Sculptra_body__c</referenceTo>
    <relationshipLabel>Sculptra Body(S)</relationshipLabel>
    <relationshipName>Sculptra_Body_S</relationshipName>
    <type>Lookup</type>
</CustomField>